@@ -64,6 +64,11 @@ void make_simple_cert(hexenc<id> const & id,
                       cert_value const & cv,
                       app_state & app,
                       cert & c);
+void put_simple_revision_cert(revision_id const & id,
+                              cert_name const & nm,
+                              cert_value const & val,
+                              app_state & app,
+                              packet_consumer & pc);
 
 void erase_bogus_certs(std::vector< revision<cert> > & certs,
                        app_state & app);
